// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component with props should match snapshot 1`] = `
<input
  className="input-field"
  name="search"
  placeholder="Input your date"
/>
`;

exports[`Input component without props should match snapshot 1`] = `
<input
  className="input-field"
/>
`;
